# bench_timer

./: Cargo.toml  README.tpl  readme.md
examples/: s.rs
src/: lib.rs
tests/: test_s.rs
