[package]
name = "timer"
version = "0.1.0"
authors = ["biluohc <biluohc@qq.com>"]
license = "MIT"

repository = "https://github.com/biluohc/timer"
documentation = "https://docs.rs/timer/"
readme = "readme.md"
# categories = ["command-line-interface"]
keywords = ["bench"]

[badges]
travis-ci = { repository = "biluohc/timer" }


[dependencies]
stderr = "0.8.0"